force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__Active__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Active__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates if this process input is active.</description>
        <inlineHelpText>Select the checkbox to activate this process input.</inlineHelpText>
        <label>Active</label>
        <type>Checkbox</type>
    </CustomField>