force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__BinaryChoice__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__BinaryChoice__c</fullName>
        <label>Binary Choice</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Yes</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>