force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__ConditionsMet__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ConditionsMet__c</fullName>
        <description>Indicates which Process Input conditions must be met.</description>
        <inlineHelpText>Indicate which Process Input conditions must be met.</inlineHelpText>
        <label>Conditions Met</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>All</fullName>
                </value>
                <value>
                    <fullName>Any</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>