force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__DefaultField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DefaultField__c</fullName>
        <description>Quote field that sources default value for this input.</description>
        <inlineHelpText>Quote field that sources default value for this input.</inlineHelpText>
        <label>Default Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Bill To Country</fullName>
                </value>
                <value>
                    <fullName>Ship To Country</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>