force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__DisplayOrder__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__DisplayOrder__c</fullName>
        <defaultValue>1</defaultValue>
        <description>The order that the process input is displayed.</description>
        <inlineHelpText>Enter the order that the process input should be displayed.</inlineHelpText>
        <label>Display Order</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>