force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__InputField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__InputField__c</fullName>
        <description>The API name for the field that accepts the user entry.</description>
        <inlineHelpText>Select the API name for the field that accepts the user entry.</inlineHelpText>
        <label>Input Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>BinaryChoice__c</fullName>
                </value>
                <value>
                    <fullName>IntegerInput__c</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>