force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__IntegerInput__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__IntegerInput__c</fullName>
        <inlineHelpText>Enter a numerical value.</inlineHelpText>
        <label>Integer Input</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </CustomField>