force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__Label__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__Label__c</fullName>
        <description>Label for this filter.</description>
        <inlineHelpText>The text that you want displayed to the user in the prompt.</inlineHelpText>
        <label>Label</label>
        <length>255</length>
        <type>Text</type>
    </CustomField>