force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__ProcessInputCondition__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProcessInputCondition__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Process Input Condition</label>
        <referenceTo>SBQQ__ProcessInputCondition__c</referenceTo>
        <relationshipLabel>Process Inputs</relationshipLabel>
        <relationshipName>ProcessInputCondition</relationshipName>
        <type>Lookup</type>
    </CustomField>