force-app/main/default/objects/SBQQ__ProcessInput__c/fields/SBQQ__ProductField__c.field-meta.xml
<CustomField>
        <fullName>SBQQ__ProductField__c</fullName>
        <description>Field on Product object used in filtering products that match this input.</description>
        <inlineHelpText>Field on Product object used in filtering products that match this input.</inlineHelpText>
        <label>Product Field</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Product Name</fullName>
                </value>
                <value>
                    <fullName>Product Code</fullName>
                </value>
                <value>
                    <fullName>Product Family</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </CustomField>