force-app/main/default/objects/SBQQ__ProcessInput__c/listViews/SBQQ__All.listView-meta.xml
<ListView>
        <fullName>SBQQ__All</fullName>
        <columns>SBQQ__DisplayOrder__c</columns>
        <columns>SBQQ__Active__c</columns>
        <columns>NAME</columns>
        <columns>SBQQ__InputField__c</columns>
        <columns>SBQQ__ProductField__c</columns>
        <columns>SBQQ__Operator__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </ListView>